--- a/TeleQ.html
+++ b/TeleQ.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>TeleQ</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>TeleQ (1)</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -7714,6 +7714,7 @@ a.anchor-link {
 <span class="c1"># Step 2: Convert the string to binary</span>
 <span class="n">binary_data</span> <span class="o">=</span> <span class="n">string_to_binary</span><span class="p">(</span><span class="n">user_input</span><span class="p">)</span>
 <span class="nb">print</span><span class="p">(</span><span class="s2">"</span><span class="se">\n</span><span class="s2">Binary Representation:</span><span class="se">\n</span><span class="s2">"</span><span class="p">,</span> <span class="n">binary_data</span><span class="p">)</span>
+<span class="n">global_received_bits</span> <span class="o">=</span> <span class="p">[]</span>
 
 <span class="nb">print</span><span class="p">(</span><span class="s2">"</span><span class="se">\n\n</span><span class="s2">A sample representation of the teleportation circuit (default bit is 0):"</span><span class="p">)</span>
 
